[package]
name = "gambit-perft"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
gambit-movegen = { path = "../gambit-movegen" }
gambit-notation = { path = "../gambit-notation", features = ["fen"] }
