[package]
name = "gambit-tools"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
gambit-perft = { path = "../gambit-perft" }
clap = { version = "4.6.1", features = ["derive", "cargo", "string"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.4"
anyhow = "1.0.103"
colored = "3.1.1"
statrs = "0.18.0"
tempfile = "3.27.0"